--- a/css/main.css
+++ b/css/main.css
@@ -10,3 +10,69 @@
   clear: both;
   display: block;
 }
+
+/* header */
+#header {
+    width: 100%;
+    height: 64px;
+    position: fixed;
+    z-index: 900;
+    margin-top: 40px;
+}
+#header .inner {
+    display: block;
+    width: 960px;
+    height: auto;
+    margin: 0 auto;
+}
+a#header_logo {
+    display: block;
+    text-decoration: none;
+    font-size: 36px;
+    line-height: 50px;
+    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    color: #FFFFFF;
+    margin-top: 19px;
+}
+#global_nav {
+    display: none;
+}
+
+/* top */
+#top {
+    width: 100%;
+    height: 620px;
+    background: url(../img/header.png);
+    background-size: cover;
+    position: relative;
+    z-index: 1;
+    color: #FFFFFF;
+}
+#top .inner {
+    width: 100%;
+    height: 620px;
+    backdrop-filter: brightness(80%);
+}
+#top_logo {
+    display: block;
+    width: 258px;
+    height: auto;
+    position: absolute;
+    top: 240px;
+    left: calc((100% - 258px)*0.5);
+}
+#top_logo h1 {
+    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
+    font-weight: 400;
+    font-size: 120px;
+    line-height: 120px;
+}
+#top_logo p {
+    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 17px;
+    text-align: center;
+}
