--- a/css/main.css
+++ b/css/main.css
@@ -2,13 +2,41 @@
 @import url(../css/html5reset-1.6.1.css); /*reset css*/
 
 .inner {
-  width: 100%;
-  margin: auto;
+    display: block;
+    width: 960px;
+    margin: 0 auto;
 }
 .inner:after {
-  content: "";
-  clear: both;
-  display: block;
+    content: "";
+    clear: both;
+    display: block;
+}
+.content_title {
+    display: block;
+    width: 960px;
+    text-align: center;
+    color: #2B2B2B;
+    margin: 0 auto;
+}
+.content_title h1 {
+    font-family: 'Poppins', sans-serif;
+    font-size: 36px;
+    line-height: 51px;
+    font-weight: bold;
+}
+.content_title hr {
+    width: 40px;
+    height: 1px;
+    margin: 24px auto 0;
+    color: #333333;
+}
+.content_title p {
+    font-size: 16px;
+    line-height: 22px;
+    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    margin-top: 24px;
 }
 
 /* header */
@@ -75,4 +103,35 @@ a#header_logo {
     font-size: 16px;
     line-height: 17px;
     text-align: center;
+}
+
+/* concept */
+#concept {
+    display: block;
+    width: 100%;
+    background: #FFFFFF;
+    position: relative;
+}
+#concept .inner {
+    width: 100%;
+    padding-top: 80px;
+    padding-bottom: 553px;
+}
+#concept .concept_img {
+    display: block;
+    width: 960px;
+    height: auto;
+    position: absolute;
+    top: 298px;
+    left: calc((100% - 960px)*0.5);
+    z-index: 2;
+}
+#concept .concept_under {
+    display: block;
+    width: 100%;
+    height: 240px;
+    background-color: #EDEDED;
+    position: absolute;
+    top: 560px;
+    z-index: 1;
 }
