--- a/css/main.css
+++ b/css/main.css
@@ -135,3 +135,63 @@ a#header_logo {
     top: 560px;
     z-index: 1;
 }
+/* work */
+#work {
+    display: block;
+    width: 100%;
+    background: #FFFFFF;
+}
+#work .inner {
+    padding-top: 80px;
+    padding-bottom: 100px;
+}
+#work .work_contents {
+    display: block;
+    width: 100%;
+    max-width: 960px;
+    margin-top: 40px;
+    letter-spacing: -1em; /* 文字間を詰める */
+    white-space: nowrap; /* 自動で折り返ししない */
+}
+#work .work_content_l {
+    display: inline-block;
+    width: 50%;
+    letter-spacing: normal; /* 文字間を元に戻す */
+    white-space: normal; /* 自動で折り返し(元に戻す) */
+    vertical-align: top; /* 高さ合わせ*/
+    position: relative;
+}
+#work .work_content_r {
+    display: inline-block;
+    width: 50%;
+    letter-spacing: normal; /* 文字間を元に戻す */
+    white-space: normal; /* 自動で折り返し(元に戻す) */
+    vertical-align: top; /* 高さ合わせ*/
+}
+#work .work_content {
+    display: block;
+    width: 420px;
+}
+#work .work_content_l .work_content {
+    margin-bottom: 80px;
+    float: left;
+}
+#work .work_content_r .work_content {
+    margin-top: 120px;
+    float: right;
+}
+#work .work_content_dis h1 {
+    font-family: 'Poppins', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 40px;
+    color: #333333;
+    margin-top: 16px;
+}
+#work .work_content_dis p {
+    font-size: 16px;
+    line-height: 28px;
+    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
