--- a/css/main.css
+++ b/css/main.css
@@ -195,3 +195,41 @@ a#header_logo {
     font-weight: 400;
     font-style: normal;
 }
+/* florist */
+#florist {
+    display: block;
+    width: 100%;
+    background: #FFFFFF;
+    position: relative;
+    z-index: -2;
+    padding-top: 80px;
+    padding-bottom: 40px;
+}
+#florist .inner {
+    position: absolute;
+    z-index: 0;
+}
+#florist .florist_contents {
+    display: block;
+    width: 960px;
+    margin: 40px auto 0;
+    letter-spacing: -1em; /* 文字間を詰める */
+    white-space: nowrap; /* 自動で折り返ししない */
+}
+#florist .florist_content {
+    display: inline-block;
+    width: 300px;
+    margin-right: 30px;
+    letter-spacing: normal; /* 文字間を元に戻す */
+    white-space: normal; /* 自動で折り返し(元に戻す) */
+    vertical-align: top; /* 高さ合わせ*/
+}
+#florist .florist_top {
+    display: block;
+    width: 100%;
+    height: 374px;
+    background-color: #EDEDED;
+    position: absolute;
+    top: 0;
+    z-index: -1;
+}
