--- a/css/main.css
+++ b/css/main.css
@@ -277,3 +277,63 @@ a#header_logo {
     border-left: 1px solid #A0A0A0;
     padding-left: 16px;
 }
+/* contact */
+#contact {
+    display: block;
+    width: 100%;
+    background: url(../img/contact_us.png);
+    background-size: cover;
+}
+#contact .inner {
+    width: 100%;
+    padding-top: 80px;
+    padding-bottom: 100px;
+    background-color: rgba(255,255,255,0.5);
+}
+a#contact_btn {
+    display: block;
+    width: 360px;
+    margin: 40px auto 0;
+    text-decoration: none;
+    background: #FFFFFF;
+    color: #2B2B2B;
+    font-size: 20px;
+    line-height: 80px;
+    text-align: center;
+}
+a#contact_btn span {
+    display: inline-block;
+    width: 30px;
+    height: 20px;
+    border-radius: 2px;
+    border: solid 1px currentColor;
+    position: relative;
+    margin-right: 24px;
+    vertical-align: text-top;
+}
+a#contact_btn span::before {
+    content: "";
+    position: absolute;
+    left: 15px;
+    top: -6px;
+    width: 1px;
+    height: 20px;
+    background-color: currentColor;
+    -webkit-transform-origin: bottom;
+    transform-origin: bottom;
+    -webkit-transform: rotate(-45deg);
+    transform: rotate(-45deg);
+}
+a#contact_btn span::after {
+    content: "";
+    position: absolute;
+    left: 14px;
+    top: -6px;
+    width: 1px;
+    height: 20px;
+    background-color: currentColor;
+    -webkit-transform-origin: bottom;
+    transform-origin: bottom;
+    -webkit-transform: rotate(45deg);
+    transform: rotate(45deg);
+}
