--- a/css/main.css
+++ b/css/main.css
@@ -31,9 +31,9 @@ body {
 }
 .content_title hr {
     width: 40px;
-    height: 1px;
+    border: none;
+    border-top: 1px #333333 solid;
     margin: 24px auto 0;
-    color: #333333;
 }
 .content_title p {
     font-size: 16px;
@@ -199,6 +199,7 @@ a#header_logo {
     font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
     font-weight: 400;
     font-style: normal;
+    color: #2B2B2B;
 }
 /* florist */
 #florist {
