--- a/css/main.css
+++ b/css/main.css
@@ -54,10 +54,17 @@ body {
 }
 #header .inner {
     display: block;
+    width: 100%;
+    position: relative;
+    z-index: 901;
+}
+#header .header_contents {
+    display: block;
     width: 960px;
     height: auto;
-    margin: 0 auto;
-    position: relative;
+    position: absolute;
+    left: calc((100% - 960px)*0.5);
+    z-index: 902;
 }
 a#header_logo {
     display: block;
@@ -103,8 +110,34 @@ a#header_logo {
 #header #nav_toggle div span:nth-child(3) {
     top: 18px;
 }
-#global_nav {
-    display: none;
+/* global nav */
+#header #global_nav {
+    display: block;
+    width: 100%;
+    height: 100vh;
+    position: absolute;
+    top: 80px;
+    background-color: #FFFFFF;
+    opacity: 0.9;
+    text-align: center;
+    z-index: 10;
+}
+#header #global_nav ul {
+    list-style: none;
+}
+#header #global_nav ul li {
+    display: block;
+    width: 100%;
+    border-bottom: 1px solid #A0A0A0;
+}
+#header #global_nav ul li a {
+    text-decoration: none;
+    color: #2B2B2B;
+    font-family: "Myriad Pro", "myriad-pro", Tahoma, Verdana, sans-serif;
+    font-weight: 400;
+    font-style: normal;
+    font-size: 18px;
+    line-height: 79px;
 }
 
 /* Fixed */
@@ -130,7 +163,7 @@ a#header_logo {
     color: #A0A0A0;
 }
 #header.fixed #nav_toggle {
-    top: 15px;
+    top: 30px;
 }
 #header.fixed #nav_toggle div span {
     background: #A0A0A0;
@@ -153,6 +186,15 @@ a#header_logo {
     -moz-transform: rotate(-315deg);
     transform: rotate(-315deg);
 }
+/* #global_nav スライドアニメーション */
+/*
+#header.open #global_nav {
+    -moz-transform: translateY(1000px);
+    -webkit-transform: translateY(1000px);
+    transform: translateY(1000px);
+    visibility: visible;
+}
+*/
 /* top */
 #top {
     width: 100%;
