--- a/css/main.css
+++ b/css/main.css
@@ -585,6 +585,60 @@ a#header_logo {
     border-left: 1px solid #A0A0A0;
     padding-left: 16px;
 }
+@media screen and (max-width: 992px) {
+    #shop_info .inner {
+        width: 100%;
+        padding: 40px 0 0;
+    }
+    #shop_info .shop_info_contents {
+        width: 100%;
+        margin: 40px auto;
+        color: #2B2B2B;
+    }
+    #shop_info .shop_info_contents img {
+        width: 50%;
+        object-fit: cover;
+        margin: 0;
+        float: left;
+    }
+    #shop_info .shop_info_contents dl {
+        display: block;
+        width: 50%;
+        margin: 20px auto;
+        float: right;
+    }
+    #shop_info .shop_info_contents dl dt {
+        float: left;
+        width: calc(30% - 20px);
+        margin-left: 20px;
+    }
+    #shop_info .shop_info_contents dl dd {
+        width: 70%;
+        margin-left: calc(30% - 1px);
+    }
+}
+@media screen and (max-width: 768px) {
+    #shop_info .shop_info_contents {
+        width: calc(100% - 40px);
+        margin: 40px auto;
+        color: #2B2B2B;
+    }
+    #shop_info .shop_info_contents img {
+        width: 100%;
+        height: 370px;
+        object-fit: cover;
+        margin: 0;
+        float: none;
+    }
+    #shop_info .shop_info_contents dl {
+        display: block;
+        width: 100%;
+        margin: 20px auto;
+        float: none;
+        font-size: 14px;
+        line-height: 28px;
+    }
+}
 /* contact */
 #contact {
     display: block;
