--- a/css/main.css
+++ b/css/main.css
@@ -699,10 +699,19 @@ a#contact_btn span::after {
     -webkit-transform: rotate(45deg);
     transform: rotate(45deg);
 }
+@media screen and (max-width: 768px) {
+    #contact .inner {
+        padding-top: 40px;
+        padding-bottom: 64px;
+    }
+}
 /* footer */
 #footer {
     height: 40px;
     text-align: center;
+}
+#footer .inner {
+    width: 100%;
 }
 #footer p {
     font-size: 16px;
