fix contact btn width for sp.

--- a/css/main.css
+++ b/css/main.css
@@ -704,6 +704,9 @@ a#contact_btn span::after {
         padding-top: 40px;
         padding-bottom: 64px;
     }
+    a#contact_btn {
+        width: calc(100% - 40px);
+    }
 }
 /* footer */
 #footer {
