--- a/css/main.css
+++ b/css/main.css
@@ -584,27 +584,28 @@ a#header_logo {
 }
 #shop_info .shop_info_contents img {
     display: block;
-    width: 480px;
+    width: 50%;
     float: left;
+    object-fit: cover;
 }
 #shop_info .shop_info_contents dl {
     display: block;
-    width: 432px;
+    width: 50%;
     float: right;
     font-size: 16px;
     line-height: 22px;
 }
 #shop_info .shop_info_contents dl dt {
     float: left;
-    width: 80px;
+    width: calc(30% - 40px);
     margin-left: 40px;
 }
 #shop_info .shop_info_contents dl dd {
-    width: 311px;
-    margin-left: 120px;
+    width: calc(70% - 16px); /* padding-left 16px */
+    padding-left: 16px;
+    margin-left: calc(30% - 1px);
     margin-bottom: 12px;
     border-left: 1px solid #A0A0A0;
-    padding-left: 16px;
 }
 @media screen and (max-width: 992px) {
     #shop_info .inner {
@@ -615,36 +616,13 @@ a#header_logo {
         margin: 40px auto;
         color: #2B2B2B;
     }
-    #shop_info .shop_info_contents img {
-        width: 50%;
-        object-fit: cover;
-        margin: 0;
-        float: left;
-    }
     #shop_info .shop_info_contents dl {
-        display: block;
-        width: 50%;
         margin: 20px auto;
-        float: right;
-    }
-    #shop_info .shop_info_contents dl dt {
-        float: left;
-        width: calc(30% - 20px);
-        margin-left: 20px;
-    }
-    #shop_info .shop_info_contents dl dd {
-        width: 70%;
-        margin-left: calc(30% - 1px);
     }
 }
 @media screen and (max-width: 768px) {
     #shop_info .inner {
         padding: 40px 0 0;
-    }
-    #shop_info .shop_info_contents {
-        width: calc(100% - 40px);
-        margin: 40px auto;
-        color: #2B2B2B;
     }
     #shop_info .shop_info_contents img {
         width: 100%;
