--- a/v2.0/css/main.css
+++ b/v2.0/css/main.css
@@ -296,8 +296,8 @@ header.fixed {
     }
     .work .wrapper .list img {
         width: 100%;
-        height: auto;
-        object-fit: cover;
+        aspect-ratio: 1;
+        overflow: hidden;
     }
 }
 @media screen and (max-width: 600px) {
@@ -428,6 +428,9 @@ header.fixed {
 @media screen and (max-width: 600px) {
     .info .wrapper {
         width: calc(100% - 20px);
+    }
+    .info .wrapper .container img {
+        height: 100%;
     }
 }
 
