--- a/v2.0/css/main.css
+++ b/v2.0/css/main.css
@@ -373,9 +373,24 @@ header #nav li a:hover::after {
         column-gap: 1.0rem;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch; /* for iOS scroll */
-
-        /* To Do: custom scroll bar design. */
     }
+    .work .wrapper .list::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+    }
+    .work .wrapper .list::-webkit-scrollbar-track {
+        background: #EDEDED;
+    }
+    .work .wrapper .list::-webkit-scrollbar-thumb {
+        background: #A0A0A0;
+        
+        border: 1px solid white;
+    }
+    .work .wrapper .list::-webkit-scrollbar-thumb:hover {
+        background: #707070;
+    }
+    
+
     .work .wrapper .list .item {
         flex: 0 0 auto;
         width: 100%;
@@ -453,8 +468,21 @@ header #nav li a:hover::after {
         column-gap: 1.0rem;
         overflow-x: auto;
         -webkit-overflow-scrolling: touch; /* for iOS scroll */
-
-        /* To Do: custom scroll bar design. */
+    }
+    .florist .wrapper .list::-webkit-scrollbar {
+        width: 10px;
+        height: 10px;
+    }
+    .florist .wrapper .list::-webkit-scrollbar-track {
+        background: #EDEDED;
+    }
+    .florist .wrapper .list::-webkit-scrollbar-thumb {
+        background: #A0A0A0;
+        
+        border: 1px solid white;
+    }
+    .florist .wrapper .list::-webkit-scrollbar-thumb:hover {
+        background: #707070;
     }
     .florist .wrapper .list .item {
         flex: 0 0 auto;
